try to hide the prompt

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h2>Hidden</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ea?
+      <span class="hidden">Lorem ipsum dolor sit </span>hishxij
+    </p>
+    <h2>visibiulity</h2>
+    <p class="">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ea?
+      <span class="invisible">Lorem ipsum dolor sit amet </span>hi
+    </p>
+    <h2>visibiulity</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ea?
+      <span class="collapse">Lorem ipsum dolor sit amet </span> hi
+    </p>
+  </body>
 </html>
